--- a/app/src/main/res/layout/activity_choosing.xml
+++ b/app/src/main/res/layout/activity_choosing.xml
@@ -10,64 +10,67 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.andin.game.tictactoe.activities.Choosing"
-    android:background="#FFC501">
+    android:background="@mipmap/choosing">
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/medium"
+        android:background="@android:color/transparent"
+        android:onClick="mediumClicked"
+        android:layout_centerVertical="true"
+        android:layout_alignRight="@+id/impossible"
+        android:layout_alignEnd="@+id/impossible"
+        android:layout_marginBottom="50dp"
+        android:layout_marginTop="50dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/impossible"
+        android:background="@android:color/transparent"
+        android:onClick="impossibleClicked"
+        android:layout_below="@+id/medium"
+        android:layout_centerHorizontal="true" />
 
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@mipmap/easy"
-        android:layout_marginTop="42dp"
         android:id="@+id/easy"
         android:background="@android:color/transparent"
-        android:layout_below="@+id/imageView"
-        android:layout_alignLeft="@+id/medium"
-        android:layout_alignStart="@+id/medium"
-        android:onClick="easyClicked" />
+        android:onClick="easyClicked"
+        android:layout_above="@+id/medium"
+        android:layout_centerHorizontal="true" />
 
-    <ImageButton
+    <TextView
+        android:text="Coins"
+        android:textSize="25sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/medium"
-        android:layout_marginTop="34dp"
-        android:id="@+id/medium"
-        android:background="@android:color/transparent"
-        android:layout_below="@+id/easy"
-        android:layout_centerHorizontal="true"
-        android:onClick="mediumClicked" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/impossible"
-        android:layout_marginTop="40dp"
-        android:id="@+id/impossible"
-        android:background="@android:color/transparent"
-        android:layout_below="@+id/medium"
-        android:layout_centerHorizontal="true"
-        android:onClick="impossibleClicked" />
+        android:id="@+id/coinNr"
+        android:layout_alignTop="@+id/imageView"
+        android:layout_toLeftOf="@+id/imageView"
+        android:layout_toStartOf="@+id/imageView" />
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/playervsandroid"
+        app:srcCompat="@mipmap/coins"
         android:id="@+id/imageView"
-        android:layout_marginLeft="10dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="25dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignRight="@+id/easy"
+        android:layout_alignEnd="@+id/easy"
+        android:layout_marginTop="44dp" />
 
-    <ImageButton
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/playervsplayer"
-        android:id="@+id/playervsplayer"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/cheat"
         android:background="@android:color/transparent"
-        android:layout_below="@+id/impossible"
-        android:layout_alignLeft="@+id/imageView"
-        android:layout_alignStart="@+id/imageView"
-        android:layout_marginTop="43dp"
-        android:onClick="pvpClicked" />
+        android:onClick="cheatClicked" />
 
 </RelativeLayout>
