--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -11,26 +11,25 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.andin.game.tictactoe.activities.Game"
     android:layout_alignParentBottom="false"
-    android:background="#FFC501">
+    android:background="@mipmap/choosing">
 
     <GridLayout
         android:layout_width="match_parent"
         android:columnCount="3"
         android:rowCount="3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
         android:background="@android:drawable/screen_background_dark_transparent"
         android:layout_height="270dp"
-        android:id="@+id/buttonsgrid">
+        android:id="@+id/buttonsgrid"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="fill"
             android:layout_margin="5dp"
-            android:textSize="35sp"
+            android:textSize="30sp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:background="@android:drawable/screen_background_light_transparent"
@@ -130,14 +129,5 @@
             android:id="@+id/b9"
             android:onClick="buttonsClicked" />
     </GridLayout>
-
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="67dp"
-        android:id="@+id/textView" />
 
 </RelativeLayout>
