--- a/app/src/main/res/layout/customdialog.xml
+++ b/app/src/main/res/layout/customdialog.xml
@@ -2,26 +2,37 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@mipmap/notification">
 
     <Button
         android:text="OK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/dialogButtonOK"
-        android:layout_marginTop="20dp"
-        android:layout_below="@+id/message"
+        android:layout_marginBottom="171dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="20dp" />
+        android:background="@android:drawable/screen_background_light_transparent" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="30dp"
         android:id="@+id/message"
         android:text="Andi e seful"
-        android:layout_marginTop="31dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp" />
+        android:layout_marginTop="152dp" />
+
+    <Button
+        android:text="No"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/dialogButtonOK"
+        android:layout_alignLeft="@+id/dialogButtonOK"
+        android:layout_alignStart="@+id/dialogButtonOK"
+        android:layout_marginTop="82dp"
+        android:id="@+id/dialogButtonNO"
+        android:background="@android:drawable/screen_background_light_transparent" />
 </RelativeLayout>
